src/objects/Virtual_Event_Details__c.object
<CustomObject>
    <fields>
        <fullName>Custom_URL__c</fullName>
        <label>Custom URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <label>Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Virtual Event Details</relationshipLabel>
        <relationshipName>Virtual_Event_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhibit_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the virtual exhibit open for users to visit?</inlineHelpText>
        <label>Exhibit Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Event Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Password__c</fullName>
        <label>Meeting Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_Account__c</fullName>
        <label>Zoom Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_Type__c</fullName>
        <label>Zoom Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zoom_User_Id__c</fullName>
        <label>Zoom User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Virtual Event Details</label>
    <nameField>
        <label>Virtual Event Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Event Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>